--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Dung\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3765726941.properties
+deploy.ant.properties.file=C:\\Users\\dtuas\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GlassFishEE6\\Properties\\gfv31321847243.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Dung/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.domain=C:/Users/dtuas/personal_domain_1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Users\\dtuas\\personal_domain_1]deployer:gfv3ee6wc:localhost:36854
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Dung\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\dtuas\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
